--- a/arch/arm64/configs/merlin_defconfig
+++ b/arch/arm64/configs/merlin_defconfig
@@ -49,7 +49,7 @@ CONFIG_ZEN_INTERACTIVE=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
 # CONFIG_COMPILE_TEST is not set
-CONFIG_LOCALVERSION="-Quantum-Kyaru"
+CONFIG_LOCALVERSION="-RTX-2080-OC"
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_DEFAULT_HOSTNAME="(none)"
 CONFIG_SWAP=y
@@ -495,7 +495,7 @@ CONFIG_HOLES_IN_ZONE=y
 # CONFIG_PREEMPT_VOLUNTARY is not set
 CONFIG_PREEMPT=y
 CONFIG_PREEMPT_COUNT=y
-CONFIG_HZ=80
+CONFIG_HZ=300
 CONFIG_SCHED_HRTICK=y
 CONFIG_ARCH_SUPPORTS_DEBUG_PAGEALLOC=y
 CONFIG_ARCH_HAS_HOLES_MEMORYMODEL=y
@@ -674,9 +674,9 @@ CONFIG_CPU_FREQ_TIMES=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_USERSPACE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_ONDEMAND is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_CONSERVATIVE is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_INTERACTIVE is not set
+CONFIG_CPU_FREQ_DEFAULT_GOV_INTERACTIVE=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_SCHEDUTIL is not set
-CONFIG_CPU_FREQ_DEFAULT_GOV_BLU_SCHEDUTIL=y
+# CONFIG_CPU_FREQ_DEFAULT_GOV_BLU_SCHEDUTIL is not set
 CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
 CONFIG_CPU_FREQ_GOV_POWERSAVE=y
 CONFIG_CPU_FREQ_GOV_USERSPACE=y
@@ -784,12 +784,12 @@ CONFIG_TCP_CONG_BBR=y
 # CONFIG_DEFAULT_HYBLA is not set
 # CONFIG_DEFAULT_VEGAS is not set
 # CONFIG_DEFAULT_VENO is not set
-CONFIG_DEFAULT_WESTWOOD=y
+# CONFIG_DEFAULT_WESTWOOD is not set
 # CONFIG_DEFAULT_DCTCP is not set
 # CONFIG_DEFAULT_CDG is not set
-# CONFIG_DEFAULT_BBR is not set
+CONFIG_DEFAULT_BBR=y
 # CONFIG_DEFAULT_RENO is not set
-CONFIG_DEFAULT_TCP_CONG="westwood"
+CONFIG_DEFAULT_TCP_CONG="bbr"
 # CONFIG_TCP_MD5SIG is not set
 CONFIG_IPV6=y
 CONFIG_IPV6_ROUTER_PREF=y
@@ -5207,6 +5207,5 @@ CONFIG_ARCH_HAS_SG_CHAIN=y
 CONFIG_SBITMAP=y
 # CONFIG_STRING_SELFTEST is not set
 
-CONFIG_BLU_SCHEDUTIL_DOWN_RATE_LIMIT=1000
-CONFIG_BLU_SCHEDUTIL_UP_RATE_LIMIT=20000
-
+CONFIG_INTERACTIVE_GO_HISPEED_LOAD=75
+CONFIG_INTERACTIVE_TARGET_LOADS=50
