--- a/arch/arm64/configs/merlin_defconfig
+++ b/arch/arm64/configs/merlin_defconfig
@@ -369,14 +369,14 @@ CONFIG_IOSCHED_FIOPS=y
 CONFIG_IOSCHED_SIO=y
 CONFIG_IOSCHED_ZEN=y
 CONFIG_IOSCHED_ANXIETY=y
-# CONFIG_DEFAULT_DEADLINE is not set
+CONFIG_DEFAULT_DEADLINE=y
 # CONFIG_DEFAULT_CFQ is not set
 # CONFIG_DEFAULT_ANXIETY is not set
-CONFIG_DEFAULT_FIOPS=y
+# CONFIG_DEFAULT_FIOPS is not set
 # CONFIG_DEFAULT_SIO is not set
 # CONFIG_DEFAULT_ZEN is not set
 # CONFIG_DEFAULT_NOOP is not set
-CONFIG_DEFAULT_IOSCHED="fiops"
+CONFIG_DEFAULT_IOSCHED="deadline"
 CONFIG_MQ_IOSCHED_DEADLINE=y
 CONFIG_MQ_IOSCHED_KYBER=y
 # CONFIG_IOSCHED_BFQ is not set
@@ -685,17 +685,6 @@ CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
 CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
 CONFIG_CPU_FREQ_GOV_SCHEDUTIL=y
 CONFIG_CPU_FREQ_GOV_BLU_SCHEDUTIL=y
-CONFIG_CPU_INPUT_BOOST=y
-CONFIG_INPUT_BOOST_DURATION_MS=58
-CONFIG_WAKE_BOOST_DURATION_MS=1000
-CONFIG_INPUT_BOOST_FREQ_LP=1175000
-CONFIG_INPUT_BOOST_FREQ_PERF=1295000
-CONFIG_MAX_BOOST_FREQ_LP=1800000
-CONFIG_MAX_BOOST_FREQ_PERF=2000000
-CONFIG_MIN_FREQ_LP=850000
-CONFIG_MIN_FREQ_PERF=998000
-CONFIG_IDLE_FREQ_LP=500000
-CONFIG_IDLE_FREQ_PERF=500000
 
 #
 # CPU frequency scaling drivers
